--- a/pom.xml
+++ b/pom.xml
@@ -138,8 +138,13 @@
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-release-plugin</artifactId>
                 <version>3.0.0-M5</version>
+            </plugin>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-deploy-plugin</artifactId>
+                <version>2.8.2</version>
                 <configuration>
-                    <releaseProfiles>release</releaseProfiles>
+                    <skip>true</skip>
                 </configuration>
             </plugin>
         </plugins>
