--- a/pom.xml
+++ b/pom.xml
@@ -1,13 +1,11 @@
 <?xml version="1.0" encoding="utf-8" ?>
-<project xmlns="http://maven.apache.org/POM/4.0.0"
-         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
 
     <modelVersion>4.0.0</modelVersion>
 
     <groupId>io.stepinto</groupId>
     <artifactId>xerces2j</artifactId>
-    <version>1.0-SNAPSHOT</version>
+    <version>1.0</version>
 
     <properties>
         <maven.compiler.source>11</maven.compiler.source>
@@ -18,7 +16,8 @@
         <connection>scm:git:https://github.com/adamfitzpatrick/xerces2j.git</connection>
         <url>https://github.com/adamfitzpatrick/xerces2j</url>
         <developerConnection>scm:git:https://github.com/adamfitzpatrick/xerces2j.git</developerConnection>
-    </scm>
+      <tag>xerces2j-1.0</tag>
+  </scm>
 
     <build>
         <plugins>
